# SADAR

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  Dockerfile.backend  Makefile  README.es.md  README.md  docker-compose.yml  huggingface.yml  pyproject.toml
configs/: baseline.yaml  compare.yaml  default.yaml  eval.yaml  lstm.yaml  preprocessing.yaml  serve.yaml  transformer.yaml  tune.yaml  vae.yaml
data/processed/: anomalies.npy  scaler.npz  test.npy  train.npy  val.npy
docs/: REPORT.es.md  REPORT.md  medium_post.en.md  medium_post.md
frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx  api.ts  i18n.tsx  index.css  main.tsx
frontend/src/components/: AlertBanner.tsx  DynamicBackdrop.tsx  LangToggle.tsx  RadarPlot.tsx  RadarScope.tsx  ScoreTimeline.tsx  classify.ts  geo.ts
frontend/src/pages/: Dashboard.tsx  Metrics.tsx  Monitor.tsx  Presentation.tsx  Simulator.tsx  presentation.css
huggingface/: README.md
models/: lstm_autoencoder.pt  transformer_autoencoder.pt  vae_lstm.pt
notebooks/: 01_eda.ipynb
reports/: model_comparison.json
src/sadar/: __init__.py
src/sadar/data/: __init__.py  cleaning.py  features.py  io.py  pipeline.py  scaling.py  splitting.py  windowing.py
src/sadar/eval/: __init__.py  compare.py  evaluate.py  synthetic.py
src/sadar/models/: __init__.py  baseline.py  lstm_autoencoder.py  restore.py  train_lstm.py  train_transformer.py  train_vae.py  training.py  transformer_autoencoder.py  tune_vae.py  vae_lstm.py
src/sadar/serve/: __init__.py  (+2 more)
