[project]
name = "sadar"
version = "0.1.0"
description = "Smart Anomaly Detection for Aviation Routes — anomalous flight behavior detection with Deep Learning over ADS-B data (LEMD)."
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.2",
    "pyarrow>=16.0",
    "scikit-learn>=1.4",
    "matplotlib>=3.8",
    "plotly>=5.20",
    "pyyaml>=6.0",
    "geopy>=2.4",
    "pyproj>=3.6",
    "torch>=2.2",
    "optuna>=4.8.0",
    "fastapi>=0.136.3",
    "uvicorn[standard]>=0.48.0",
    "httpx>=0.28.1",
]

[project.scripts]
sadar-preprocess = "sadar.data.pipeline:main"
sadar-baseline = "sadar.models.baseline:main"
sadar-train-lstm = "sadar.models.train_lstm:main"
sadar-train-transformer = "sadar.models.train_transformer:main"
sadar-train-vae = "sadar.models.train_vae:main"
sadar-tune-vae = "sadar.models.tune_vae:main"
sadar-evaluate = "sadar.eval.evaluate:main"
sadar-compare = "sadar.eval.compare:main"

[dependency-groups]
dev = [
    "jupyter>=1.0",
    "ipykernel>=6.29",
    "ruff>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sadar"]

[tool.ruff]
line-length = 100
target-version = "py311"
